# opencl

./: CMakeLists.txt  README.md
add_number/: add_matrices.cl  main.cpp
